--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,5 @@ jobs:
     working_directory: /go/src/github.com/cinemast/covid19-at
     steps:
       - checkout
-      - run: GORACE="halt_on_error=1" go test -timeout 5s -race -v -coverprofile="coverage.txt" -covermode=atomic ./...
+      - run: cd src && GORACE="halt_on_error=1" go test -timeout 5s -race -v -coverprofile="coverage.txt" -covermode=atomic ./...
       - run: bash <(curl -s https://codecov.io/bash)
