--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - checkout
       - run: cd src && GORACE="halt_on_error=1" go test -timeout 5s -race -v -coverprofile="coverage.txt" -covermode=atomic ./...
-      - run: bash <(curl -s https://codecov.io/bash)
+      - run: cd src && bash <(curl -s https://codecov.io/bash)
