Grafana integration for info.gm.at

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       GF_AUTH_ANONYMOUS_ENABLED: "true"
       GF_AUTH_ANONYMOUS_ORG_NAME: "Main Org."
       GF_AUTH_ANONYMOUS_ORG_ROLE: "Viewer"
-      GF_INSTALL_PLUGINS: "grafana-worldmap-panel"
+      GF_INSTALL_PLUGINS: "grafana-worldmap-panel,grafana-piechart-panel"
     depends_on: 
       - prometheus
     ports:
